# create_cmake

./: CMakeLists.txt  create_cmake.rb  exec.list  lib.list  readme.md
as_lib/: a.cpp  a.h
bs/bs_lib/: b.cpp  b.h
cs_lib/: c.cpp  c.h
test/: test.cpp
test2_exec/: test2.cpp
